# tracen

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml
crates/tracen/: Cargo.toml
crates/tracen/src/: lib.rs
crates/tracen_analytics/: Cargo.toml
crates/tracen_analytics/src/: heatmap.rs  streak.rs  time_bucket.rs
crates/tracen_catalog/: Cargo.toml
crates/tracen_catalog/src/: lib.rs  storage.rs  types.rs  validation.rs
crates/tracen_dsl/: Cargo.toml
crates/tracen_dsl/src/: ast.rs  lib.rs  parser.rs
crates/tracen_engine/: Cargo.toml
crates/tracen_engine/src/: lib.rs
crates/tracen_eval/: Cargo.toml
crates/tracen_eval/src/: lib.rs
crates/tracen_export/: Cargo.toml
crates/tracen_export/src/: lib.rs
crates/tracen_ffi/: Cargo.toml
crates/tracen_ffi/src/: lib.rs
crates/tracen_ffi/tests/: ffi_integration.rs
crates/tracen_ffi_core/: Cargo.toml
crates/tracen_ffi_core/src/: lib.rs
crates/tracen_ir/: Cargo.toml
crates/tracen_ir/src/: lib.rs
crates/tracen_pack/: Cargo.toml
crates/tracen_pack/src/: lib.rs
crates/tracen_pack/tests/: build_integration.rs
crates/tracen_pack_codegen/: Cargo.toml
crates/tracen_pack_codegen/src/: lib.rs  model.rs  naming.rs
crates/tracen_pack_codegen/templates/: rust_ffi_glue.txt  rust_pack_runtime.txt  ts_api_contract.txt  ts_compat_api_contract.txt  ts_compat_domain_contract.txt  ts_domain_contract.txt  ts_dsl_contract.txt
