[package]
name = "tracen_export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
