[package]
name = "tracen_ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
license-file = "../../LICENSE"
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tracen_ffi_core.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
