[package]
name = "tracen_ffi_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
license-file = "../../LICENSE"
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracen_engine.workspace = true
tracen_ir.workspace = true
tracen_export.workspace = true
